<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg3"
    android:keepScreenOn="true"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/llImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:id="@+id/ivScreenShot"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50sp"
                android:layout_weight="1"
                android:contentDescription="@string/image"
                android:src="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llImage"
            android:weightSum="3">

            <Button
                android:id="@+id/btnMultipleImages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/images"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSingleImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/image"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDetect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/detect"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/llButtons"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50sp">

            <EditText
                android:id="@+id/etText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="12sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOptionButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llText"
            android:weightSum="3">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/clear"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/copy"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnServer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/server"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>